--- a/index.html
+++ b/index.html
@@ -451,19 +451,21 @@
           <div class="testimonial-slide">
             <div class="testimonial-content">
               <div class="testimonial-image">
-                <img src="https://images.pexels.com/photos/27296458/pexels-photo-27296458/free-photo-of-femme-modele-visage-portrait.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Portrait de Sophie, femme souriante aux cheveux bruns" width="100" height="100">
+                <img src="./img/IMG-20240808-WA0003~2.jpg" alt="Portrait de Sophie, femme souriante aux cheveux bruns" width="100" height="100">
               </div>
-              <p class="testimonial-text">"Grâce à jeune femme éveillée, j'ai trouvé la confiance nécessaire pour lancer ma propre entreprise. Les ateliers et le soutien de la communauté ont été inestimables."</p>
-              <p class="testimonial-author">Sophie D., Entrepreneure</p>
+              <p class="testimonial-text">"Le changement que j'ai eu à contacter personnellement c'est 
+                La façon de penser et de croire en moi même et se battre pour réaliser mes objectifs de la vie  
+                Je dirais les enseignements viens en quelques sortes m'encourager."</p>
+              <p class="testimonial-author">Estrella., Administratrice>
             </div>
           </div>
           <div class="testimonial-slide">
             <div class="testimonial-content">
               <div class="testimonial-image">
-                <img src="https://images.pexels.com/photos/12320256/pexels-photo-12320256.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Portrait de Marie, femme confiante aux cheveux blonds" width="100" height="100">
+                <img src="./img/IMG-20240810-WA0002~2.jpg" alt="Portrait de Marie, femme confiante aux cheveux blonds" width="100" height="100">
               </div>
-              <p class="testimonial-text">"Les programmes de leadership d'jeune femme éveillée m'ont aidée à gravir les échelons dans mon entreprise. Je suis maintenant directrice et je me sens prête à relever tous les défis."</p>
-              <p class="testimonial-author">Marie L., Directrice Marketing</p>
+              <p class="testimonial-text">"Jeune Femme Éveillée m'a aidée à voir les choses différemment. J'ai appris que le mariage n'est pas une obligation pour être heureuse, et qu'il est possible de progresser dans la vie en étant célibataire. J'ai aussi compris qu'un homme qui m'aime vraiment soutiendra mes projets au lieu de les freiner. En somme, Jeune Femme Éveillée m'a permis de mieux me connaître et de faire des choix alignés avec mes valeurs."</p>
+              <p class="testimonial-author">Beraca Ebambi.</p>
             </div>
           </div>
         </div>
