--- a/contact.html
+++ b/contact.html
@@ -310,7 +310,7 @@
         <div class="contact-grid">
           <div class="contact-form">
             <h2>Envoyez-nous un message</h2>
-            <form id="contact-form" action="https://formspree.io/f/myzgwvqe"
+            <form id="contact-form" action="https://formspree.io/f/mnnavbna"
             method="POST">
               <div class="form-group">
                 <label for="name">Nom</label>
