--- a/apropos.html
+++ b/apropos.html
@@ -395,9 +395,9 @@ width: 100%;
             </div>
           </div>
           <div class="team-member">
-            <img src="https://scontent.ffih1-2.fna.fbcdn.net/v/t39.30808-6/453408606_1842474466236605_5076012479337337519_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeFjC7jtV3pFIlKu7OFD5diDxUiKhY6vawDFSIqFjq9rAIt-lBI-Z4EVQ8RRpB0OJCuWbuRHR_s--pUzRvd0y1cE&_nc_ohc=GdhLjoYvrLQQ7kNvgF0OrEh&_nc_zt=23&_nc_ht=scontent.ffih1-2.fna&oh=00_AYAAq11IKWQjIYLyKvstdZni1tZGkGSZrVLqwR-ux1ukvg&oe=66B6648F" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
+            <img src="./img/IMG-20240730-WA0013~2.jpg" alt="Portrait de Sophie Martin, Directrice des Programmes" class="team-member-image" width="250" height="300">
             <div class="team-member-info">
-              <h3 class="team-member-name">Dorcas Bonze</h3>
+              <h3 class="team-member-name">Dorcas Bonve</h3>
               <p class="team-member-role">Responsable événementiel</p>
               <p>Experte en organisation de nos événements.</p>
             </div>
